Mon Nov 21 22:50:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_path_skip_prefix, rb_file_s_basename): UNC without path
	  should not be splitted.  fixed: [ruby-dev:27776] [ruby-dev:27786]

	* parse.y (dsym): prohibit empty symbol literal by interpolation.
	  fixed: [ruby-talk:166529]

Mon Nov 21 16:03:48 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/setup.mk: findstr doesn't exist on win9x.
	  fixed: [ruby-dev:27756]

Sun Nov 20 21:39:27 2005  K.Kosako <sndgk393 AT ybb.ne.jp>

	* regparse.c (fetch_token_in_cc): tok->escaped should be
	  initialized.  [ruby-dev:27763]

Sun Nov 20 22:34:06 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_symname_p): [ not followed by ] is not valid symbol.
	  fixed: [ruby-talk:166520]

Sat Nov 19 19:57:54 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::ln): ln documentation fix.
	  [ruby-core:06661]

Sat Nov 19 08:19:38 2005  Zach Dennis  <zdennis@mktec.com>

	* ext/socket/socket.c: Socket Documentation. [ruby-core:6552]

Sat Nov 19 07:34:32 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/font.rb: remove dependency on Ruby's version (1.8
	  or 1.9).

	* ext/tk/lib/tkextlib/ICONS/icons.rb: ditto.

	* ext/tk/sample/tkextlib/treectrl/demo.rb: ditto.

Fri Nov 18 18:07:05 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_file_s_dirname): should use skipprefix for UNC path.
	  pointed out by nobu ([ruby-dev:27744]). fixed: [ruby-core:5076]

Fri Nov 18 17:35:09 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: add restriction to access the entried
	  command table and manipulate other IPs (for reason of security).
	  Now, a IP object can be controlled by only its master IP or the
	  default IP.

	* ext/tk/lib/remote-tk.rb: add restriction to manipulate.

	* ext/tk/tcltklib.c (ip_is_slave_of_p): add TclTkIp#slave_of?(ip)
	  to check manipulability.

	* ext/tk/lib/tk.rb: bug fix on handling of Tcl's namespaces.
