@@ -2573,7 +2573,7 @@ rb_file_s_basename(int argc, VALUE *argv)
 {
     VALUE fname, fext, basename;
     char *name, *p;
-#ifdef DOSISH
+#if defined DOSISH_DRIVE_LETTER || defined DOSISH_UNC
     char *root;
 #endif
     int f;
@@ -2585,7 +2585,7 @@ rb_file_s_basename(int argc, VALUE *argv)
     if (RSTRING(fname)->len == 0 || !*(name = RSTRING(fname)->ptr))
 	return fname;
     name = skipprefix(name);
-#ifdef DOSISH
+#if defined DOSISH_DRIVE_LETTER || defined DOSISH_UNC
     root = name;
 #endif
     while (isdirsep(*name))
@@ -2593,7 +2593,7 @@ rb_file_s_basename(int argc, VALUE *argv)
     if (!*name) {
 	p = name - 1;
 	f = 1;
-#ifdef DOSISH
+#if defined DOSISH_DRIVE_LETTER || defined DOSISH_UNC
 	if (name != root) {
 	    /* has slashes */
 	}
